--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde_yaml = "0.9"
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.0", features = ["derive"] }
 async-trait = "0.1"
 md-5 = "0.10.6" # for some hashing if needed, or we can use others
@@ -23,3 +24,5 @@ rand = "0.8"
 futures = "0.3"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "socks"] }
 url = "2.5"
+axum = "0.7"
+serde_json = "1.0"
