--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
 bind: "127.0.0.1:5335"
+api_port: 3002
 entry: main
 log:
   level: info
@@ -84,6 +85,3 @@ plugins:
       size: 10000
       exec:
         - main_sequence
-server:
-  addr: 127.0.0.1:5353
-  entry: main
