--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,6 @@ reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"
 url = "2.5"
 axum = "0.7"
 serde_json = "1.0"
+
+[dev-dependencies]
+tempfile = "3.23.0"
